updated app of apps name

--- a/tenants/demo-backstage-uat/argocd/app-of-apps.yaml
+++ b/tenants/demo-backstage-uat/argocd/app-of-apps.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: demo-backstage-uat-apps
+  name: client-app-of-apps
   namespace: argocd
   labels:
     client: demo-backstage
