--- a/tenants/demo-backstage-uat/argocd/values/omnix/values.yaml
+++ b/tenants/demo-backstage-uat/argocd/values/omnix/values.yaml
@@ -12,6 +12,7 @@ global:
     app: demo-omnix
     environment: uat
     managed-by: argocd
+    testing: hello
 
 # Deployment configuration
 deployment:
