--- a/tenants/demo-backstage-uat/catalog-info.yaml
+++ b/tenants/demo-backstage-uat/catalog-info.yaml
@@ -11,7 +11,7 @@ metadata:
 
     # ArgoCD Integration - THIS MAKES THE ARGOCD TAB APPEAR!
     # Shows both the App-of-Apps manager and the actual workload application
-    argocd/app-name: demo-backstage-uat-apps,demo-backstage-omnix
+    argocd/app-name: demo-backstage-uat-apps
     argocd/instance-name: argoInstance  # Must match the name in app-config.yaml
 
     # Kubernetes Integration (for when you install the Kubernetes plugin)
