--- a/tenants/demo-backstage-uat/argocd/applications/devplatform.yaml
+++ b/tenants/demo-backstage-uat/argocd/applications/devplatform.yaml
@@ -21,5 +21,12 @@ spec:
     automated:
       prune: true
       selfHeal: true
+      allowEmpty: false
     syncOptions:
       - CreateNamespace=true
+    retry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
