added kubernetes annotation

--- a/tenants/demo-backstage-uat/argocd/values/omnix/values.yaml
+++ b/tenants/demo-backstage-uat/argocd/values/omnix/values.yaml
@@ -13,6 +13,7 @@ global:
     environment: uat
     managed-by: argocd
     testing: hello
+    backstage.io/kubernetes-id: demo-service
 
 # Deployment configuration
 deployment:
