added annotation in pods

--- a/tenants/demo-backstage-uat/argocd/values/omnix/values.yaml
+++ b/tenants/demo-backstage-uat/argocd/values/omnix/values.yaml
@@ -33,6 +33,7 @@ pod:
     app: demo-omnix
   annotations:
     description: "Test pod for ArgoCD"
+    backstage.io/kubernetes-id: demo-service
 
 # Number of replicas
 replicaCount: 1
