testing pod labels

--- a/tenants/demo-backstage-uat/argocd/values/omnix/values.yaml
+++ b/tenants/demo-backstage-uat/argocd/values/omnix/values.yaml
@@ -32,6 +32,7 @@ pod:
   labels:
     app: demo-omnix
     backstage.io/kubernetes-id: demo-service
+    hello: bye
   annotations:
     description: "Test pod for ArgoCD"
 
