--- a/tenants/demo-backstage-uat/argocd/applications/go-app.yaml
+++ b/tenants/demo-backstage-uat/argocd/applications/go-app.yaml
@@ -9,7 +9,7 @@ spec:
   project: demo-backstage-uat
   source:
     repoURL: https://github.com/chandrashekhar-appointy/platform-middleclients-gitops.git
-    targetRevision: HEAD
+    targetRevision: main
     path: charts/omnix
     helm:
       valueFiles:
