--- a/tenants/demo-backstage-uat/argocd/applications/go-app.yaml
+++ b/tenants/demo-backstage-uat/argocd/applications/go-app.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: demo-backstage-uat
   source:
-    repoURL: https://github.com/chandrashekhar-appointy/platform-middleclients-gitops.git
+    repoURL: https://github.com/chandrashekhar-appointy/platform-middleclients-gitops
     targetRevision: main
     path: charts/Omnix
     helm:
