--- a/tenants/demo-backstage-uat/argocd/applications/testing-go-application.yaml
+++ b/tenants/demo-backstage-uat/argocd/applications/testing-go-application.yaml
@@ -16,7 +16,7 @@ spec:
         - ../../tenants/demo-backstage-uat/argocd/values/testing-go-application.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: backstage
+    namespace: uat
   syncPolicy:
     automated:
       prune: true
